--- a/views/index/schoolSignUp.ejs
+++ b/views/index/schoolSignUp.ejs
@@ -232,10 +232,8 @@
                             <!-- JS because of IE support; better: placeholder="Password" -->
 
                             <div>
-                                <span style="width:48%; text-align:left;  display: inline-block;"><a class="small-text"
-                                        href="#">Forgot
-                                        password?</a></span>
-                                <span style="width:50%; text-align:right;  display: inline-block;"><input type="submit"
+                               
+                                <span style="width:50%; text-align:centre;  display: inline-block;"><input type="submit"
                                         value="Sign Up"></span>
                             </div>
 
