--- a/views/index/schoolSignUp.ejs
+++ b/views/index/schoolSignUp.ejs
@@ -1,4 +1,4 @@
-<!----><%- include ('../partials/header'); -%>
+<!----><%- include ('../partials/headerLanding'); -%>
 <style>
     @charset "utf-8";
 
@@ -229,7 +229,7 @@
                             <p><span class="fa fa-phone"></span><input type="number" name="number"
                                     Placeholder="Contact No" required>
                             </p>
-                            <!-- JS because of IE support; better: placeholder="Password" -->
+                           <!-- JS because of IE support; better: placeholder="Password" -->
 
                             <div>
                                
