--- a/views/index/login.ejs
+++ b/views/index/login.ejs
@@ -1,3 +1,4 @@
+<%- include ('../partials/header'); -%>
 <style>
    @charset "utf-8";
 
@@ -50,14 +51,18 @@
        font: 87.5%/1.5em 'Open Sans', sans-serif;
        margin: 0;
    }
-
+    
    a {
        color: #eee;
        text-decoration: none;
+       font-size: 10px;
+
+
    }
 
    a:hover {
        text-decoration: underline;
+       color: #d44179;
    }
 
    input {
@@ -109,7 +114,7 @@
 
    #login1 {
        border-right: 1px solid #fff;
-       padding: 100px 22px;
+       padding: 60px 2px;
        width: 59%;
    }
 
@@ -223,15 +228,14 @@
                                    Placeholder="Confirm Password" required>
                            </p>
                            <!-- JS because of IE support; better: placeholder="Password" -->
-
+                           <p><a href="#" style="float:centre;">Forgot Password?</a>
+                           </p>
                            <div>
-         
-                               <span style="width:50%; text-align:right;  display: inline-block;"><input type="submit"
+                               <span style="width:50%; text-align:center;  display: inline-block;"><input type="submit"
                                        value="Sign In"></span>
                            </div>
 
                        </fieldset>
-                       <div class="clearfix"></div>
                    </form>
 
                    <div class="clearfix"></div>
