Authentication and voter Schema Addition

--- a/views/index/voterSignUp.ejs
+++ b/views/index/voterSignUp.ejs
@@ -214,7 +214,7 @@
                         <fieldset class="clearfix">
  
  
-                            <p><span class="fa fa-user"></span><input type="text" name="username" Placeholder="VoterID"
+                            <p><span class="fa fa-user"></span><input type="text" name="VoterId" Placeholder="VoterID"
                                     required></p>
                             <!-- JS because of IE support; better: placeholder="Password" -->
  
