--- a/views/partials/subHead.ejs
+++ b/views/partials/subHead.ejs
@@ -18,7 +18,7 @@
     <div class="container">
 
       <form class="form-inline" style="width: 30%; margin: 10px auto;" action="/poll" method="POST">
-        <input class="form-control mr-sm-2" type="text" placeholder="Enter The Name Of The Poll" name="poll">
+        <input class="form-control mr-sm-2" type="text" placeholder="Enter The Name Of The Poll" name="poll" minlength="3">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Create a Poll</button>
       </form>
     </div>
